cabal-version: 3.0

name:           blueripple-model-clustering
version:        0.1.0.0
synopsis:       data-loading utilities
category:       Data
homepage:       https://github.com/blueripple/model-clustering#readme
bug-reports:    https://github.com/blueripple/model-clustering/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/model-clustering

library
  exposed-modules: BlueRipple.Model.DistrictClusters, BlueRipple.Model.TSNE
  hs-source-dirs: src
  ghc-options: -Wall -O2 -fno-warn-unused-top-binds -funbox-strict-fields
  build-depends:
     blueripple-small-data-sets
   , blueripple-data-types
   , blueripple-data-tools
   , array >= 0.4 && < 0.6
   , cassava >= 0.5 && < 0.6
   , clock >= 0.8 && < 0.9
   , Frames >= 0.7 && < 0.8
   , Frames-hvega >= 0.3 && < 0.4
   , Frames-utils >= 0.3.1
   , Frames-streamly >= 0.2
   , Frames-serialize >= 0.1.0
   , flat >= 0.5 && < 0.7
   , base >=4.12.0 && <5
   , bytestring >= 0.11.0.0 && < 0.13
   , containers >=0.5.0 && <0.10
   , data-science-utils >= 0.1 && < 0.3
   , directory >=1.3.3.0 && <1.4.0.0
   , exceptions >=0.10.4 && <0.11
   , foldl >= 1.4 && < 1.5
   , foldl-statistics >= 0.1.5.1 && < 0.2
   , grid >= 7.8 && < 8
   , groups >= 0.5 && < 0.6
   , hashable >= 1.4 && < 1.7
   , hashtables >= 1.3 && < 1.6
   , hvega >= 0.12 && < 0.13
   , hvega-utils >= 0.3 && < 0.4
   , knit-haskell >= 0.8 && < 0.11
   , map-reduce-folds >= 0.1.1.1 && < 0.2
   , massiv >= 1 && < 2
   , Frames-map-reduce >= 0.4 && < 0.5
   , mtl >= 2.2 && < 2.4
   , mwc-random >= 0.14 && < 0.16
   , pandoc >=2.9
   , pipes >= 4.2 && < 4.4
   , polysemy >=1.2 && < 1.10
   , polysemy-plugin >= 0.4.5
   , polysemy-RandomFu
   , primitive >= 0.8 && < 0.10
   , profunctors >= 5.5 && < 5.7
   , random-fu >= 0.3 && < 0.4
   , relude >= 1.0.0 && < 1.3
   , say >= 0.1 && < 0.2
   , semirings > 0.5 && < 0.9
   , som >= 10 && < 11
   , text >=1.2.3 && < 2.2
   , time >= 1.8 && < 1.20
   , tsne >= 1.3.0 && < 2
   , vector >= 0.12 && < 0.14
   , vinyl >= 0.13 && < 0.15
   , streamly >=0.9 && <0.13
   , streamly-core >=0.1.0 && <0.5
   , streamly-bytestring >=0.2.0 && < 0.3

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
